--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "devMorshed",
   "license": "MIT",
   "scripts": {
+    "build:watch": "tsc -w",
     "start:prod": "node ./dist/server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "lint": "yarn eslint .",
